# sift-rs

./: .dockerignore  .env.example  .gitignore  .npmignore  BUILD_SYSTEM_SUMMARY.md  Cargo.toml  Dockerfile  Makefile  PERFORMANCE_IMPROVEMENTS.md  README.md  README_API.md  README_WASM.md  build.ps1  build.sh  debug_query.rs  debug_specific.rs  docker-compose.yml  generate_comparison.js  run_benchmarks.sh
benches/: sift_benchmarks.rs
benchmark-comparison/: benchmark.js  package-lock.json  package.json
chat-backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
chat-backend/src/: ai_agent.rs  chat_handler.rs  main.rs  models.rs  sift_integration.rs
example-web-app/: index.html
examples/: basic_usage.rs  comparison_operators.rs  comprehensive_examples.rs
future-optimization/: ELEM_MATCH_FUTURE_OPTIMIZATIONS.md  ELEM_MATCH_OPTIMIZATION_PLAN.md  IMMEDIATE_ELEM_MATCH_OPTIMIZATION.md  PERFORMANCE_IMPROVEMENTS.md  WASM_ELEM_MATCH_OPTIMIZATION_PLAN.md
query-builder-component/: package-lock.json  package.json  readme.md  stencil.config.ts
query-builder-component/src/: components.d.ts  index.html
query-builder-component/src/components/query-builder/: query-builder.css  query-builder.tsx  readme.md
sift-rs-wasm/: Cargo.toml  package.json
sift-rs-wasm/src/: lib.rs
src/: core.rs  lib.rs  main.rs  operations.rs  operations_old.rs  query.rs  utils.rs
src/operation_modules/: elem_match_operation.rs  exists_operation.rs  logic_operations.rs  mod.rs  mod_operation.rs  regex_operation.rs  size_operation.rs  type_operation.rs  where_operation.rs
tests/: and_or_nesting_rule_test.rs  comprehensive_operator_tests.rs  date_comparison_tests.rs  debug_where_test.rs  rustyscript_standalone_test.rs  where_debug_test.rs
web/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
web/playwright-report/: index.html
web/src/app/: page.tsx
web/src/app/components/: ChatInterface.tsx  JsonEditor.tsx  QueryBuilder.tsx  SiftValidator.tsx  ValidationResult.tsx
web/test-results/: .last-run.json
web/test-results/query-builder-undo-redo-Qu-f382e-ditions-and-using-undo-redo-chromium/: error-context.md
web/test-results/query-builder-undo-redo-Qu-f382e-ditions-and-using-undo-redo-firefox/: error-context.md
web/test-results/query-builder-undo-redo-Qu-f382e-ditions-and-using-undo-redo-webkit/: error-context.md
web/tests/: query-builder-undo-redo.spec.ts  simple-circular-test.spec.ts
