[package]
name = "sift-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MongoDB query filtering in Rust - A port of sift.js"
license = "MIT"
repository = "https://github.com/georgefloros/sift-rs"
keywords = ["mongodb", "query", "filter", "database", "json"]
categories = ["database", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Axum web framework dependencies
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rustyscript = { git = "https://github.com/rscarson/rustyscript.git", branch = "master" }
[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12.22", features = ["json"] }
criterion = { version = "0.7.0", features = ["html_reports"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "comprehensive_examples"
path = "examples/comprehensive_examples.rs"

[[bench]]
name = "sift_benchmarks"
harness = false
