[package]
name = "sift-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MongoDB query filtering in Rust - A port of sift.js"
license = "MIT"
repository = "https://github.com/georgefloros/sift-rs"
keywords = ["mongodb", "query", "filter", "database", "json"]
categories = ["database", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Axum web framework dependencies (only for server functionality)
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.0", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
rustyscript = { git = "https://github.com/rscarson/rustyscript.git", branch = "master", optional = true }
boa_engine = { version = "0.20.0", optional = true, default-features = false }
boa_gc = { version = "0.20.0", optional = true }
boa_interner = { version = "0.20.0", optional = true }
boa_parser = { version = "0.20.0", optional = true }
boa_ast = { version = "0.20.0", optional = true }
getrandom = { version = "0.2", optional = true, features = ["js"] }

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio", 
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:rustyscript",
]

wasm = [
    "dep:getrandom",
    "dep:boa_engine",
    "dep:boa_gc",
    "dep:boa_interner",
    "dep:boa_parser",
    "dep:boa_ast",
]



[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12.23", features = ["json"] }
criterion = { version = "0.7.0", features = ["html_reports"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "comprehensive_examples"
path = "examples/comprehensive_examples.rs"

[[bench]]
name = "sift_benchmarks"
harness = false

[[bin]]
name = "sift-rs-server"
path = "src/bin/server.rs"
required-features = ["server"]

[workspace]
members = [
    ".",
    "sift-rs-wasm",
    "chat-backend"
]
