[package]
name = "sift-rs-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for sift-rs - MongoDB query filtering in Rust"
license = "MIT"
repository = "https://github.com/georgefloros/sift-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
sift-rs = { path = "..", default-features = false, features = ["wasm"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }